Thu Mar 30 17:23:52 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* tests/general/bug-36-inc.xsl tests/general/bug-37-inc.xsl
	  tests/general/bug-65-inc.xsl tests/general/bug-100.xsl
	  tests/REC/test-15-1.xsl tests/REC/test-7.1.1-3.xsl
	  tests/namespaces/extra2.xsl tests/extensions/module.xsl
	  tests/plugins/plugin.xsl python/tests/extelem.py
	  python/tests/extfunc.py: Fixed regression tests wrt
	  usage of the attributes "exclude-result-prefixes"
	  and "extension-element-prefixes". test-7.1.1-3.xsl fails
	  now, since the code still does not exclude ns-decls
	  correctly.

Thu Mar 30 17:11:53 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/xslt.c libxslt/xsltutils.c libxslt/preproc.c
	  libxslt/namespaces.c libxslt/imports.c
	  libxslt/attributes.c: Eliminated usage of xsltGetNsProp() in cases
	  where an attribute with a specific namespace is requested.
	  xsltGetNsProp() uses xmlGetProp() which is not namespace aware
	  and thus will return the first attribute with the requested
	  name but of arbitrary namespace.
	  Changed retrieval of the attributes "exclude-result-prefixes"
	  and "extension-element-prefixes", which are expected to be in
	  no namespace on XSLT elements and in the XSLT namespace on
	  literal result elements or extension elements.
	  Additional change: for XSLT elements the attribute
	  "exclude-result-prefixes" is only allowed on xsl:stylesheet
	  and xsl:transform. This attribute was previously processed on
	  all XSLT elements.

Wed Mar 29 12:16:41 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: Charles Hardin pointed an OOM condition where
	  a NULL pointer could be dereferenced, closes #336394

Fri Mar 10 12:49:18 CET 2006 Daniel Veillard <daniel@veillard.com>

	* libexslt/crypto.c libexslt/date.c libexslt/saxon.c
	  libxslt/attributes.c libxslt/imports.c libxslt/pattern.c
	  libxslt/preproc.c libxslt/transform.c libxslt/variables.c