@@ -1,205 +1,198 @@
-.\"Generated by db2man.xsl. Don't modify this, modify the source.
-.de Sh \" Subsection
-.br
-.if t .Sp
-.ne 5
-.PP
-\fB\\$1\fR
-.PP
-..
-.de Sp \" Vertical space (when we can't use .PP)
-.if t .sp .5v
-.if n .sp
-..
-.de Ip \" List item
-.br
-.ie \\n(.$>=3 .ne \\$3
-.el .ne 3
-.IP "\\$1" \\$2
-..
-.TH "XSLTPROC" 1 "2006-02-20" "libxslt" "xsltproc Manual"
-.SH NAME
+.\" ** You probably do not want to edit this file directly **
+.\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
+.\" Instead of manually editing it, you probably should edit the DocBook XML
+.\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
+.TH "XSLTPROC" "1" "2006\-03\-05" "libxslt" ""
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
+.ad l
+.SH "NAME"
 xsltproc \- command line XSLT processor
 .SH "SYNOPSIS"
-.ad l
-.hy 0
 .HP 9
-\fBxsltproc\fR [[\fB\fB\-V\fR\fR | \fB\fB\-\-version\fR\fR] [\fB\fB\-v\fR\fR | \fB\fB\-\-verbose\fR\fR] [{\fB\fB\-o\fR\fR | \fB\fB\-\-output\fR\fR} {\fB\fIFILE\fR\fR | \fB\fIDIRECTORY\fR\fR}] | \fB\fB\-\-timing\fR\fR | \fB\fB\-\-repeat\fR\fR | \fB\fB\-\-debug\fR\fR | \fB\fB\-\-novalid\fR\fR | \fB\fB\-\-noout\fR\fR | \fB\fB\-\-maxdepth\ \fIVALUE\fR\fR\fR | \fB\fB\-\-html\fR\fR | \fB\fB\-\-param\ \fIPARAMNAME\fR\ \fIPARAMVALUE\fR\ \fR\fR | \fB\fB\-\-stringparam\ \fIPARAMNAME\fR\ \fIPARAMVALUE\fR\ \fR\fR | \fB\fB\-\-nonet\fR\fR | \fB\fB\-\-path\ \fI"PATHS"\fR\fR\fR | \fB\fB\-\-load\-trace\fR\fR | \fB\fB\-\-catalogs\fR\fR | \fB\fB\-\-xinclude\fR\fR [\fB\fB\-\-profile\fR\fR | \fB\fB\-\-norman\fR\fR] | \fB\fB\-\-dumpextensions\fR\fR | \fB\fB\-\-nowrite\fR\fR | \fB\fB\-\-nomkdir\fR\fR | \fB\fB\-\-writesubtree\ \fIPATH\fR\fR\fR | \fB\fB\-\-nodtdattr\fR\fR] [\fISTYLESHEET\fR] {\fB\fIXML\-FILE\fR\fR | \fB\-\fR}
-.ad
-.hy
-
+\fBxsltproc\fR [[\fB\-V\fR \fB\-\-version\fR] [\fB\-v\fR \fB\-\-verbose\fR] [{\fB\-o\fR \fB\-\-output\fR} {\fIFILE\fR \fIDIRECTORY\fR}] \fB\-\-timing\fR \fB\-\-repeat\fR \fB\-\-debug\fR \fB\-\-novalid\fR \fB\-\-noout\fR \fB\-\-maxdepth\ \fR\fB\fIVALUE\fR\fR \fB\-\-html\fR \fB\-\-param\ \fR\fB\fIPARAMNAME\fR\fR\fB\ \fR\fB\fIPARAMVALUE\fR\fR\fB\ \fR \fB\-\-stringparam\ \fR\fB\fIPARAMNAME\fR\fR\fB\ \fR\fB\fIPARAMVALUE\fR\fR\fB\ \fR \fB\-\-nonet\fR \fB\-\-path\ "\fR\fB\fIPATH(S)\fR\fR\fB"\fR \fB\-\-load\-trace\fR \fB\-\-catalogs\fR \fB\-\-xinclude\fR [\fB\-\-profile\fR\ \fB\-\-norman\fR] \fB\-\-dumpextensions\fR \fB\-\-nowrite\fR \fB\-\-nomkdir\fR \fB\-\-writesubtree\ \fR\fB\fIPATH\fR\fR \fB\-\-nodtdattr\fR] [\fISTYLESHEET\fR] {\fIXML\-FILE\fR \-}
 .SH "DESCRIPTION"
-
 .PP
-\fBxsltproc\fR is a command line tool for applying XSLT stylesheets to XML documents\&. It is part of libxslt, the XSLT C library for GNOME\&. While it was developed as part of the GNOME project, it can operate independently of the GNOME desktop\&.
-
+\fBxsltproc\fR
+is a command line tool for applying
+XSLT
+stylesheets to
+XML
+documents. It is part of
+\fBlibxslt\fR(3), the XSLT C library for GNOME. While it was developed as part of the GNOME project, it can operate independently of the GNOME desktop.
 .PP
-\fBxsltproc\fR is invoked from the command line with the name of the stylesheet to be used followed by the name of the file or files to which the stylesheet is to be applied\&. It will use the standard input if a filename provided is \- \&.
-
+\fBxsltproc\fR
+is invoked from the command line with the name of the stylesheet to be used followed by the name of the file or files to which the stylesheet is to be applied. It will use the standard input if a filename provided is
+\fB\-\fR
+.
 .PP
-If a stylesheet is included in an XML document with a Stylesheet Processing Instruction, no stylesheet need to be named at the command line\&. \fBxsltproc\fR will automatically detect the included stylesheet and use it\&.
-
+If a stylesheet is included in an
+XML
+document with a Stylesheet Processing Instruction, no stylesheet need to be named at the command line.
+\fBxsltproc\fR
+will automatically detect the included stylesheet and use it.
 .PP
-By default, output is to \fIstdout\fR\&. You can specify a file for output using the \fB\-o\fR or \fB\-\-output\fR option\&.
-
+By default, output is to
+\fIstdout\fR. You can specify a file for output using the
+\fB\-o\fR
+or
+\fB\-\-output\fR
+option.
 .PP
-More information can be found at the libxml web pages at \fIhttp://www.xmlsoft.org/\fR and the W3C XSLT pages at \fIhttp://www.w3.org/TR/xslt\fR\&.
-
+More information can be found at
+.TP 3
+\(bu
+\fBlibxml\fR(3)
+web page
+\fI\%http://www.xmlsoft.org/\fR
+.TP
+\(bu
+W3C
+XSLT
+page
+\fI\%http://www.w3.org/TR/xslt\fR
 .SH "OPTIONS"
-
 .PP
-\fBxsltproc\fR accepts the following options (in alphabetical order):
-
+\fBxsltproc\fR
+accepts the following options (in alphabetical order):
 .TP
 \fB\-\-catalogs\fR
-Use the SGML catalog specified in \fBSGML_CATALOG_FILES\fR to resolve the location of external entities\&. By default, \fBxsltproc\fR looks for the catalog specified in \fBXML_CATALOG_FILES\fR\&. If that is not specified, it uses \fI/etc/xml/catalog\fR\&.
-
+Use the
+SGML
+catalog specified in
+\fBSGML_CATALOG_FILES\fR
+to resolve the location of external entities. By default,
+\fBxsltproc\fR
+looks for the catalog specified in
+\fBXML_CATALOG_FILES\fR. If that is not specified, it uses
+\fI/etc/xml/catalog\fR.
 .TP
 \fB\-\-debug\fR
-Output an XML tree of the transformed document for debugging purposes\&.
-
+Output an
+XML
+tree of the transformed document for debugging purposes.
 .TP
 \fB\-\-dumpextensions\fR
-Dumps the list of all registered extensions on \fIstdout\fR\&.
-
+Dumps the list of all registered extensions on
+\fIstdout\fR.
 .TP
 \fB\-\-html\fR
-The input document is an HTML file\&.
-
+The input document is an
+HTML
+file.
 .TP
 \fB\-\-load\-trace\fR
-Display all the documents loaded during the processing to \fIstderr\fR\&.
-
+Display all the documents loaded during the processing to
+\fIstderr\fR.
 .TP
-\fB\-\-maxdepth \fIVALUE\fR\fR
-Adjust the maximum depth of the template stack before libxslt concludes it is in an infinite loop\&. The default is 500\&.
-
+\fB\-\-maxdepth \fR\fB\fIVALUE\fR\fR
+Adjust the maximum depth of the template stack before
+\fBlibxslt\fR(3)
+concludes it is in an infinite loop. The default is 500.
 .TP
 \fB\-\-nodtdattr\fR
-Do not apply default attributes from the document's DTD\&.
-
+Do not apply default attributes from the document's
+DTD.
 .TP
 \fB\-\-nomkdir\fR
-Refuses to create directories\&.
-
+Refuses to create directories.
 .TP
 \fB\-\-nonet\fR
-Do not use the Internet to fetch DTDs, entities or documents\&.
-
+Do not use the Internet to fetch
+DTDs, entities or documents.
 .TP
 \fB\-\-noout\fR
-Do not output the result\&.
-
+Do not output the result.
 .TP
 \fB\-\-novalid\fR
-Skip loading the document's DTD\&.
-
+Skip loading the document's
+DTD.
 .TP
 \fB\-\-nowrite\fR
-Refuses to write to any file or resource\&.
-
+Refuses to write to any file or resource.
 .TP
 \fB\-o\fR or \fB\-\-output\fR \fIFILE\fR | \fIDIRECTORY\fR
-Direct output to the given \fIFILE\fR\&. Using the option with a \fIDIRECTORY\fR directs the output files to the specified directory\&. This can be useful for multiple outputs (also known as "chunking") or manpage processing\&. Note: The given directory must already exist\&.
-
+Direct output to the given
+\fIFILE\fR. Using the option with a
+\fIDIRECTORY\fR
+directs the output files to the specified directory. This can be useful for multiple outputs (also known as "chunking") or manpage processing.
+\fBNote:\fR
+The given directory
+\fBmust\fR
+already exist.
 .TP
-\fB\-\-param \fIPARAMNAME\fR \fIPARAMVALUE\fR\fR
-Pass a parameter of name \fIPARAMNAME\fR and value \fIPARAMVALUE\fR to the stylesheet\&. You may pass multiple name/value pairs up to a maximum of 32\&. If the value being passed is a string rather than a node identifier, use \fB\-\-stringparam\fR instead\&.
-
+\fB\-\-param \fR\fB\fIPARAMNAME\fR\fR\fB \fR\fB\fIPARAMVALUE\fR\fR
+Pass a parameter of name
+\fIPARAMNAME\fR
+and value
+\fIPARAMVALUE\fR
+to the stylesheet. You may pass multiple name/value pairs up to a maximum of 32. If the value being passed is a string rather than a node identifier, use
+\fB\-\-stringparam\fR
+instead.
 .TP
-\fB\-\-path \fI"PATHS"\fR\fR
-Use the (space\- or colon\-separated) list of filesystem paths specified by \fIPATHS\fR to load DTDs, entities or documents\&. Enclose space\-separated lists by quotation marks\&.
-
+\fB\-\-path "\fR\fB\fIPATH(S)\fR\fR\fB"\fR
+Use the (space\- or colon\-separated) list of filesystem paths specified by
+\fIPATHS\fR
+to load
+DTDs, entities or documents. Enclose space\-separated lists by quotation marks.
 .TP
 \fB\-\-profile\fR or \fB\-\-norman\fR
-Output profiling information detailing the amount of time spent in each part of the stylesheet\&. This is useful in optimizing stylesheet performance\&.
-
+Output profiling information detailing the amount of time spent in each part of the stylesheet. This is useful in optimizing stylesheet performance.
 .TP
 \fB\-\-repeat\fR
-Run the transformation 20 times\&. Used for timing tests\&.
-
+Run the transformation 20 times. Used for timing tests.
 .TP
-\fB\-\-stringparam \fIPARAMNAME\fR \fIPARAMVALUE\fR\fR
-Pass a paramenter of name \fIPARAMNAME\fR and value \fIPARAMVALUE\fR where \fIPARAMVALUE\fR is a string rather than a node identifier\&. Note: The string must be UTF\-8 encoded\&.
-
+\fB\-\-stringparam \fR\fB\fIPARAMNAME\fR\fR\fB \fR\fB\fIPARAMVALUE\fR\fR
+Pass a paramenter of name
+\fIPARAMNAME\fR
+and value
+\fIPARAMVALUE\fR
+where
+\fIPARAMVALUE\fR
+is a string rather than a node identifier.
+\fBNote:\fR
+The string must be UTF\-8 encoded.
 .TP
 \fB\-\-timing\fR
-Display the time used for parsing the stylesheet, parsing the document and applying the stylesheet and saving the result\&. Displayed in milliseconds\&.
-
+Display the time used for parsing the stylesheet, parsing the document and applying the stylesheet and saving the result. Displayed in milliseconds.
 .TP
 \fB\-v\fR or \fB\-\-verbose\fR
-Output each step taken by \fBxsltproc\fR in processing the stylesheet and the document\&.
-
+Output each step taken by
+\fBxsltproc\fR
+in processing the stylesheet and the document.
 .TP
 \fB\-V\fR or \fB\-\-version\fR
-Show the version of libxml and libxslt used\&.
-
+Show the version of
+\fBlibxml\fR(3)
+and
+\fBlibxslt\fR(3)
+used.
 .TP
-\fB\-\-writesubtree \fIPATH\fR\fR
-Allow file write only within the \fIPATH\fR subtree\&.
-
+\fB\-\-writesubtree \fR\fB\fIPATH\fR\fR
+Allow file write only within the
+\fIPATH\fR
+subtree.
 .TP
 \fB\-\-xinclude\fR
-Process the input document using the Xinclude specification\&. More details on this can be found in the Xinclude specification: \fIhttp://www.w3.org/TR/xinclude/\fR 
-
+Process the input document using the Xinclude specification. More details on this can be found in the Xinclude specification:
+\fI\%http://www.w3.org/TR/xinclude/\fR
 .SH "ENVIRONMENT"
-
 .TP
 \fBSGML_CATALOG_FILES\fR
-\&.\&.\&.
-
+to be written ...
 .TP
 \fBXML_CATALOG_FILES\fR
-\&.\&.\&.
-
+Catalog behavior can be changed by redirecting queries to the user's own set of catalogs. This can be done by setting the
+\fBXML_CATALOG_FILES\fR
+environment variable to a list of catalogs. An empty one should deactivate loading the default
+\fI/etc/xml/catalog\fR
+default catalog.
 .SH "DIAGNOSTICS"
-
 .PP
-\fBxsltproc\fR's return codes provide information that can be used when calling it from scripts\&.
-
-.TP
-\fB0\fR
-No error (normal operation)
-
-.TP
-\fB1\fR
-No argument
-
-.TP
-\fB2\fR
-Too many parameters
-
-.TP
-\fB3\fR
-Unknown option
-
-.TP
-\fB4\fR
-Failed to parse the stylesheet
-
-.TP
-\fB5\fR
-Error in the stylesheet
-
-.TP
-\fB6\fR
-Error in one of the documents
-
-.TP
-\fB7\fR
-Unsupported xsl:output method
-
-.TP
-\fB8\fR
-String parameter contains both quote and double\-quotes
-
-.TP
-\fB9\fR
-Internal processing error
-
-.TP
-\fB10\fR
-Processing was stopped by a terminating message
-
-.SH AUTHOR
-John Fleck <jfleck@inkstain\&.net>.
+\fBxsltproc\fR's return codes provide information that can be used when calling it from scripts.
+Errorcode: \fB0\fRError: No errorErrorcode: \fB1\fRError: No argumentErrorcode: \fB2\fRError: Too many parametersErrorcode: \fB3\fRError: Unknown optionErrorcode: \fB4\fRError: Failed to parse the stylesheetErrorcode: \fB5\fRError: Error in the stylesheetErrorcode: \fB6\fRError: Error in one of the documentsErrorcode: \fB7\fRError: Unsupported xsl:output methodErrorcode: \fB8\fRError: String parameter contains both quote and double\-quotesErrorcode: \fB9\fRError: Internal processing errorErrorcode: \fB10\fRError: Processing was stopped by a terminating message.SH "SEE ALSO"
+.PP
+\fBlibxslt\fR(3)
+.SH "AUTHOR"
+John Fleck <jfleck@inkstain.net>. 
